--- a/suorganizer/templates/base.html
+++ b/suorganizer/templates/base.html
@@ -31,8 +31,7 @@
     <footer>
       <p>
         &copy; 2015
-        <a href="https://AndrewsForge.com/">
-          Andrew Pinkham</a>
+          Ronald Formusoh
       </p>
       <p>
         Created for
