--- a/suorganizer/blog/templates/blog/post_detail.html
+++ b/suorganizer/blog/templates/blog/post_detail.html
@@ -1,3 +1,11 @@
+{% extends parent_template|default:"blog/base_blog.html" %}
+
+{% block title %}
+{{ block.super }} - {{ post.title|title }}
+{% endblock %}
+
+{% block content %}
+
 <article>
 
     <header>
@@ -45,3 +53,4 @@
   {% endif %}
 
 </article>
+{%endblock%}
