--- a/suorganizer/organizer/templates/organizer/startup_list.html
+++ b/suorganizer/organizer/templates/organizer/startup_list.html
@@ -1,11 +1,20 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+
+{% block title %}
+{{ block.super }} - Tag List
+{% endblock %}
+
+{% block content %}
+
 <h2>Startup List</h2>
 <ul>
   {% for startup in startup_list %}
     <li>
-      <a href="">
+      <a href="{{ startup.get_absolute_url }}">
         {{ startup.name }}</a>
     </li>
   {% empty %}
     <li><em>No Startups Available</em></li>
   {% endfor %}
 </ul>
+{%endblock%}
