--- a/suorganizer/organizer/templates/organizer/tag_list.html
+++ b/suorganizer/organizer/templates/organizer/tag_list.html
@@ -1,5 +1,5 @@
  {% extends parent_template|default:"organizer/base_organizer.html" %}
- 
+
 {% block title %}
 {{ block.super }} - Tag List
 {% endblock %}
@@ -9,7 +9,7 @@
   <ul>
     {% for tag in tag_list %}
       <li>
-        <a href="">
+        <a href="{{ tag.get_absolute_url }}">
           {{ tag.name|title }}</a>
       </li>
     {% empty %}
