--- a/suorganizer/organizer/templates/organizer/startup_detail.html
+++ b/suorganizer/organizer/templates/organizer/startup_detail.html
@@ -27,7 +27,7 @@
 
   {{ startup.description|linebreaks }}
 
-      {% if startup.newslink_set.all %}
+      <!-- {% if startup.newslink_set.all %}
           <section>
             <h3>Recent News</h3>
               <p>
@@ -42,7 +42,7 @@
               {% endfor %}
             </ul>
           </section>
-      {% endif %}
+      {% endif %} -->
 
       {% if startup.blog_posts.all %}
           <section>
