--- a/suorganizer/blog/templates/blog/post_detail.html
+++ b/suorganizer/blog/templates/blog/post_detail.html
@@ -5,11 +5,18 @@
 {% endblock %}
 
 {% block content %}
-
 <article>
 
     <header>
       <h2>{{ post.title|title }}</h2>
+      <ul>
+        <li>
+          <a href="{{ post.get_update_url }}">
+            Edit Post</a></li>
+        <li>
+          <a href="{{ post.get_delete_url }}">
+            Delete Post</a></li>
+      </ul>
       <p>
         Written on
         <time datetime="{{ post.pub_date|date:"Y-m-d" }}">
@@ -28,7 +35,7 @@
             <h3>Startup{{ post.startups.count|pluralize }}</h3>
             <ul>
               {% for startup in post.startups.all %}
-                <li><a href="">
+                <li><a href="{{ startup.get_absolute_url }}">
                   {{ startup.name }}
                 </a></li>
               {% endfor %}
@@ -41,7 +48,7 @@
             <h3>Tag{{ post.tags.count|pluralize }}</h3>
             <ul>
               {% for tag in post.tags.all %}
-                <li><a href="">
+                <li><a href="{{ tag.get_absolute_url }}">
                   {{ tag.name|title }}
                 </a></li>
               {% endfor %}
@@ -53,4 +60,4 @@
   {% endif %}
 
 </article>
-{%endblock%}
+{% endblock %}
