--- a/suorganizer/organizer/templates/organizer/startup_detail.html
+++ b/suorganizer/organizer/templates/organizer/startup_detail.html
@@ -8,6 +8,11 @@
 <article>
 
   <h2>{{ startup.name }}</h2>
+    <ul>
+        <li>
+          <a href="{{ startup.get_update_url }}">
+            Edit Startup</a></li>
+    </ul>
   <dl>
     <dt>Date Founded</dt>
       <dd>{{ startup.founded_date|date:"F jS, Y" }}</dd>
@@ -27,7 +32,7 @@
 
   {{ startup.description|linebreaks }}
 
-      <!-- {% if startup.newslink_set.all %}
+      {% if startup.newslink_set.all %}
           <section>
             <h3>Recent News</h3>
               <p>
@@ -38,11 +43,19 @@
                 <li>
                   <a href="{{ newslink.link }}">
                     {{ newslink.title|title }}</a>
+                    <ul>
+                        <li>
+                          <a href="{{ newslink.get_update_url }}">
+                            Edit Link</a></li>
+                        <li>
+                          <a href="{{ newslink.get_delete_url }}">
+                            Delete Link</a></li>
+                    </ul>
                 </li>
               {% endfor %}
             </ul>
           </section>
-      {% endif %} -->
+      {% endif %}
 
       {% if startup.blog_posts.all %}
           <section>
