--- a/suorganizer/organizer/templates/organizer/startup_list.html
+++ b/suorganizer/organizer/templates/organizer/startup_list.html
@@ -1,25 +1,31 @@
 {% extends parent_template|default:"organizer/base_organizer.html" %}
 
 {% block title %}
-{{ block.super }} - Tag List
+{{ block.super }} - Startups
 {% endblock %}
 
 {% block content %}
-
-<div>
-  <a href="{% url 'organizer_startup_create' %}">
-    Create New Startup </a>
-</div>
-
-<h2>Startup List</h2>
-<ul>
-  {% for startup in startup_list %}
-    <li>
-      <a href="{{ startup.get_absolute_url }}">
-        {{ startup.name }}</a>
-    </li>
-  {% empty %}
-    <li><em>No Startups Available</em></li>
-  {% endfor %}
-</ul>
-{%endblock%}
+  <h2>Startup List</h2>
+    <div>
+      <a href="{% url 'organizer_startup_create' %}">
+        Create New Startup</a>
+    </div>
+  <ul>
+    {% for startup in startup_list %}
+      <li>
+        <a href="{{ startup.get_absolute_url }}">
+          {{ startup.name }}</a>
+          <ul>
+              <li>
+                <a href="{{ startup.get_update_url }}">
+                  Edit Startup</a></li>
+              <li>
+                <a href="{{ startup.get_delete_url }}">
+                  Delete Startup</a></li>
+          </ul>
+      </li>
+    {% empty %}
+      <li><em>No Startups Available</em></li>
+    {% endfor %}
+  </ul>
+{% endblock %}
