--- a/suorganizer/templates/base.html
+++ b/suorganizer/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,6 +14,9 @@
     <!--[if IE]><script
       src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
     </script><![endif]-->
+    <link rel="stylesheet" type="text/css"
+      href="{% static 'site/style.css' %}">
+    {%block head%}{%endblock%}
   </head>
 
   <body>
