--- a/suorganizer/templates/base.html
+++ b/suorganizer/templates/base.html
@@ -1,3 +1,5 @@
+{% load flatpages %}
+{% get_flatpages as flatpages %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
@@ -39,6 +41,12 @@
           <li>
             <a href="{% url 'contact' %}">
               Contact</a></li>
+          {% for page in flatpages %}
+            <li>
+              <a href="{{ page.get_absolute_url }}">
+                {{ page.title }}</a></li>
+          {% endfor %}
+
         </ul>
       </nav>
       {% if messages %}
