--- a/suorganizer/templates/base.html
+++ b/suorganizer/templates/base.html
@@ -1,6 +1,6 @@
+{% load staticfiles %}
 {% load flatpages %}
 {% get_flatpages as flatpages %}
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,15 +17,21 @@
       src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
     </script><![endif]-->
     <link rel="stylesheet" type="text/css"
+      href="{% static 'site/normalize.css' %}">
+    <link rel="stylesheet" type="text/css"
+      href="{% static 'site/skeleton.css' %}">
+    <link rel="stylesheet" type="text/css"
       href="{% static 'site/style.css' %}">
-    {%block head%}{%endblock%}
+    {% block head %}{% endblock %}
   </head>
 
   <body>
 
-    <div><!-- container -->
-      <header>
-          <h1>Startup Organizer</h1>
+    <div class="container">
+      <header class="row">
+        <div class="offset-by-one ten columns">
+          <h1 class="logo">Startup Organizer</h1>
+        </div>
       </header>
       <nav>
         <ul>
@@ -46,13 +52,12 @@
               <a href="{{ page.get_absolute_url }}">
                 {{ page.title }}</a></li>
           {% endfor %}
-
         </ul>
       </nav>
       {% if messages %}
-        <div>
-          <div>
-            <ul>
+        <div class="row">
+          <div class="twelve columns">
+            <ul class="messages">
               {% for message in messages %}
                 {% if message.tags %}
                   <li class="{{ message.tags }}">
@@ -73,6 +78,8 @@
     <footer>
       <p>
         &copy; 2015
+        <a href="https://AndrewsForge.com/">
+          Andrew Pinkham</a>
       </p>
       <p>
         Created for
