--- a/suorganizer/organizer/templates/organizer/startup_list.html
+++ b/suorganizer/organizer/templates/organizer/startup_list.html
@@ -52,8 +52,8 @@
             Previous</a>
         </li>
       {% endif %}
-      <li>
-        Page {{ startup_list.number }}
+ <li>
+        Page {{ page_obj.number }}
         of {{ paginator.num_pages }}
       </li>
       {% if next_page_url %}
