--- a/suorganizer/organizer/templates/organizer/tag_list.html
+++ b/suorganizer/organizer/templates/organizer/tag_list.html
@@ -30,7 +30,7 @@
         </li>
       {% endif %}
       <li>
-        Page {{ tag_list.number}}
+        Page {{ page_obj.number}}
         of {{ paginator.num_pages }}
       </li>
       {% if next_page_url %}
