--- a/suorganizer/templates/base.html
+++ b/suorganizer/templates/base.html
@@ -26,6 +26,21 @@
   <body>
 
     <div class="container">
+      <div class="status row">
+        <div class="offset-by-eight four columns">
+          <ul class="inline">
+            {% if user.is_authenticated %}
+               <li><a href="{% url 'dj-auth:logout' %}?next={{ request.path }}">
+                Log Out</a></li>
+            {% else %}
+            <li><a href="{% url 'dj-auth:create' %}">
+                Register</a></li>
+               <li><a href="{% url 'dj-auth:login' %}?next={{ request.path }}">
+                Log In</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
       <header class="row">
         <div class="offset-by-one ten columns">
           <h1 class="logo">Startup Organizer</h1>
