added resend activation email

--- a/suorganizer/blog/templates/blog/base_blog.html
+++ b/suorganizer/blog/templates/blog/base_blog.html
@@ -3,5 +3,5 @@
  {% load staticfiles %}
  {% block head %}
  <link rel="stylesheet" type="text/css"
-   href="{% static 'blog/style.css' %}" />
+   href="{% static 'site/style.css' %}" />
  {% endblock %}
