--- a/suorganizer/user/templates/user/login.html
+++ b/suorganizer/user/templates/user/login.html
@@ -15,6 +15,9 @@
           Register New Account</a></li>
         <li><a href="{% url 'dj-auth:pw_reset_start' %}">
           Forgotten password?</a></li>
+        <li><a href="{% url 'dj-auth:resend_activation' %}">
+          Lost Activation E-Mail?</a>
+        </div>
       </ul>
     </div>
   </div>
